{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 149,
  "lineage": "dd044b46-d7bf-f94a-764f-74074396f768",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_Gateway_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcd7f169b18aa523",
            "association_id": "eipassoc-0ea70b2b767439cf3",
            "domain": "vpc",
            "id": "eipalloc-0fcd7f169b18aa523",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03ceb35d3ad4687ac",
            "private_dns": "ip-10-0-4-50.ec2.internal",
            "private_ip": "10.0.4.50",
            "public_dns": "ec2-54-221-230-239.compute-1.amazonaws.com",
            "public_ip": "54.221.230.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:internet-gateway/igw-0aa1c78cfa526d61b",
            "id": "igw-0aa1c78cfa526d61b",
            "owner_id": "044722000155",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcd7f169b18aa523",
            "connectivity_type": "public",
            "id": "nat-0db0276edbe295f35",
            "network_interface_id": "eni-03ceb35d3ad4687ac",
            "private_ip": "10.0.4.50",
            "public_ip": "54.221.230.239",
            "subnet_id": "subnet-0e2d488385136f6c0"
          },
          "dependencies": [
            "aws_eip.NAT_Gateway_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "IGW_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa1c78cfa526d61b",
            "id": "r-rtb-0d3165b1f3beaa1a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3165b1f3beaa1a8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.IGW_Route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route_to_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d64d8e0841d12fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0db0276edbe295f35",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d64d8e0841d12fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.NAT_GW_Route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "IGW_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:route-table/rtb-0d3165b1f3beaa1a8",
            "id": "rtb-0d3165b1f3beaa1a8",
            "owner_id": "044722000155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa1c78cfa526d61b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for IGW"
            },
            "tags_all": {
              "Name": "Route Table for IGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_GW_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:route-table/rtb-04d64d8e0841d12fa",
            "id": "rtb-04d64d8e0841d12fa",
            "owner_id": "044722000155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db0276edbe295f35",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT GW"
            },
            "tags_all": {
              "Name": "Route Table for NAT GW"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33ce4ec43cdb3e7",
            "route_table_id": "rtb-04d64d8e0841d12fa",
            "subnet_id": "subnet-021664b5178ca932f"
          },
          "dependencies": [
            "aws_route_table.NAT_GW_Route_table",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02385b798e6b25d8b",
            "route_table_id": "rtb-04d64d8e0841d12fa",
            "subnet_id": "subnet-0d80d4da8bf78b46a"
          },
          "dependencies": [
            "aws_route_table.NAT_GW_Route_table",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fa9b1024e303243",
            "route_table_id": "rtb-04d64d8e0841d12fa",
            "subnet_id": "subnet-0bb357a10dbd9b8f1"
          },
          "dependencies": [
            "aws_route_table.NAT_GW_Route_table",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b2a2e9a21bae50e",
            "route_table_id": "rtb-0d3165b1f3beaa1a8",
            "subnet_id": "subnet-0e2d488385136f6c0"
          },
          "dependencies": [
            "aws_route_table.IGW_Route_table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf46db179b9ae59e",
            "route_table_id": "rtb-0d3165b1f3beaa1a8",
            "subnet_id": "subnet-0c31acc28466cecbc"
          },
          "dependencies": [
            "aws_route_table.IGW_Route_table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d463b6b5a0feb7",
            "route_table_id": "rtb-0d3165b1f3beaa1a8",
            "subnet_id": "subnet-0e9872b06ca04f680"
          },
          "dependencies": [
            "aws_route_table.IGW_Route_table",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:security-group/sg-0860a8f738360b158",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0860a8f738360b158",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05993dddc582074c1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05993dddc582074c1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Private_Security_Group",
            "name_prefix": "",
            "owner_id": "044722000155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Security Group"
            },
            "tags_all": {
              "Name": "Private Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Public_Security_Group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:security-group/sg-05993dddc582074c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05993dddc582074c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public_Security_Group",
            "name_prefix": "",
            "owner_id": "044722000155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Security Group"
            },
            "tags_all": {
              "Name": "Public Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-021664b5178ca932f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021664b5178ca932f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_Subnet"
            },
            "tags_all": {
              "Name": "private_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0d80d4da8bf78b46a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80d4da8bf78b46a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_Subnet"
            },
            "tags_all": {
              "Name": "private_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0bb357a10dbd9b8f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb357a10dbd9b8f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_Subnet"
            },
            "tags_all": {
              "Name": "private_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0e2d488385136f6c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2d488385136f6c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_Subnet"
            },
            "tags_all": {
              "Name": "public_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0c31acc28466cecbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c31acc28466cecbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_Subnet"
            },
            "tags_all": {
              "Name": "public_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:subnet/subnet-0e9872b06ca04f680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9872b06ca04f680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044722000155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_Subnet"
            },
            "tags_all": {
              "Name": "public_Subnet"
            },
            "vpc_id": "vpc-0c163af2796b13ef5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044722000155:vpc/vpc-0c163af2796b13ef5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6e2285bb2b77bb8",
            "default_route_table_id": "rtb-07bb0f78bc6369945",
            "default_security_group_id": "sg-0655bb01dfc9648d8",
            "dhcp_options_id": "dopt-01eab6a19d4eb6ef9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c163af2796b13ef5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07bb0f78bc6369945",
            "owner_id": "044722000155",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}